[tool.poetry]
name = "tweetlikes-dl"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.12.1"
appdirs = "^1.4.4"
click = "^8.0.0"
requests = "^2.25.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"
flake8 = "^3.9.2"
isort = "^5.8.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tdl = "tweetlikes_dl.cli:cli"
